# dimtributor

./: LICENSE  README.md  data_quantity.csv  data_rate.csv  example.ipynb  pyproject.toml
src/dimtributor/: tree.py
